# next-app

./: .gitignore  .gitmodules  Agents.md  CHANGELOG.txt  CMakeLists.txt  README.md  SECURITY.md  bootstrap-and-run-backend.sh  bootstrap-nextappd-container.sh  build-docker-image.sh  build-nextapp-image.sh  build-project-image.sh  build-signup-image.sh  mariadb-container-with-storage.sh  mariadb-container.sh  nextappd-container.sh  todo.md
building/: build-flatpak-kde.sh  build-flatpak.sh  build-nextapp-image.sh  build-project-image.sh  build-signup-image.sh
cmake/: 3rdparty.cmake
doc/: acceptance-tests.md  architecture.md  attributions.md  bootstrapping.md  calendar.md  local-development.md  sample-eula.html  sample-welcome.html
docker/: Dockerfile.build  Dockerfile.nextappd  Dockerfile.nextappd.bt  Dockerfile.signupd  build-nextappd.sh  build-signupd.sh  startup.sh
flatpak/: eu.lastviking.NextApp.desktop  (+3 more)
src/NextAppUi/: ActionCategoriesModel.cpp  ActionCategoriesModel.h  ActionInfoCache.cpp  ActionInfoCache.h  ActionStatsModel.cpp  ActionStatsModel.h  ActionsModel.cpp  ActionsModel.h  ActionsOnCurrentCalendar.cpp  ActionsOnCurrentCalendar.h  ActionsWorkedOnTodayCache.cpp  ActionsWorkedOnTodayCache.h  AppDelegate.mm  AppInstanceMgr.cpp  AppInstanceMgr.h  CMakeLists.txt  CalendarCache.cpp  CalendarCache.h  CalendarDayModel.cpp  CalendarDayModel.h  CalendarModel.cpp  CalendarModel.h  CategoryUseModel.cpp  CategoryUseModel.h  DayColorModel.cpp  DayColorModel.h  DayModel.cpp  DayModel.h  DaysModel.cpp  DaysModel.h  DbStore.cpp  DbStore.h  DevicesModel.cpp  DevicesModel.h  DualView.cpp  DualView.h  EventScheduler.cpp  EventScheduler.h  GreenDayModel.cpp  GreenDayModel.h  (+56 more)
src/NextAppUi/android/: AndroidFcmBridge.cpp  AndroidFcmBridge.cpp.in  AndroidFcmBridge.h  AndroidFcmBridge.h.in  AndroidHandlers.cpp  AndroidHandlers.cpp.in  AndroidHandlers.h  AndroidHandlers.h.in  AndroidManifest.fcm.xml  AndroidManifest.xml  AndroidManifest.xml.in  JniGuard.h  JniGuard.h.in  JniRegistration.cpp  build.gradle.fcm  build.gradle.in
src/NextAppUi/android/notes/: QtAndroidService.java
src/NextAppUi/android/src/: MainActivity.java.in  MainActivityFcm.java.in  NextappFirebaseMessagingService.java.in  QtAndroidService.java.in
src/NextAppUi/android/src-fcm/eu/lastviking/nextapp/app/: FcmInitializerImpl.java  MainActivityFcm.java  NextappFirebaseMessagingService.java
src/NextAppUi/android/src/eu/lastviking/nextapp/: QtAndroidService.java.in
src/NextAppUi/android/src/eu/lastviking/nextapp/app/: FcmInitializer.java  MainActivity.java
src/NextAppUi/build-configs/: vcpkg-with-qt.json  vcpkg.json
src/NextAppUi/cmake/: openssl.cmake
src/NextAppUi/qml/: About.qml  ActionStatisticsView.qml  ActionStatsDlg.qml  ActionsList.qml  ActionsListFilterDlg.qml  ActionsListView.qml  CheckBoxWithFontIcon.qml  Colors.qml  CommonElements.qml  CurrentWorkSessionsView.qml  DatePicker.qml  DayDialog.qml  DaysInYear.qml  DevicesDlg.qml  DisabledDimmer.qml  DlgInputField.qml  DueSelectionDialog.qml  EditActionDlg.qml  EditActionView.qml  EditNodeDlg.qml  EditWorkSession.qml  GlobalSettings.qml  ImportExport.qml  MainTree.qml  MyMenu.qml  MyMenuBar.qml  NoInstance.qml  NotificationsView.qml  ReportsView.qml  ResizeButton.qml  SelectedIndicatorBar.qml  ServerSettings.qml  SettingsDlg.qml  Sidebar.qml  SplitViewComponent.qml  StyledButton.qml  StyledCheckBox.qml  StyledComboBox.qml  StyledHeaderView.qml  StyledTabButton.qml  (+10 more)
src/NextAppUi/qml/android/: DrawerContent.qml  ImportDataDlg.qml  TodoList.qml  WorkSessionsCompactList.qml  WorkSessionsStacked.qml  main.qml
src/NextAppUi/qml/calendar/: CalendarView.qml  CategoriesUsed.qml  CategoryUsedPopup.qml  DayPlan.qml  EditTimeBlockDlg.qml  ExpandArea.qml  HoursBar.qml  TimeBlock.qml  TimeBlockArea.qml  TimeBox.qml
src/NextAppUi/qml/categories/: CategoriesMgr.qml  CategoryComboBox.qml  ColorPicker.qml  EditCategoryDlg.qml
src/NextAppUi/qml/components/: DatePicker.qml  DbInfoDlg.qml  DifficultySelector.qml  MoveDue.qml  PrioritySelector.qml  SliderTicks.qml  TimeAndDurationInput.qml  TimeInput.qml  ToolBarBtn.qml  UnrecognizedDeviceErrorDlg.qml  WhenSelector.qml
src/NextAppUi/qml/dialogs/: FeedbackDlg.qml
src/NextAppUi/qml/greendays/: DayDialog.qml  DaysInYear.qml  GdMonth.qml  GdQuarter.qml
src/NextAppUi/qml/log/: LogDialog.qml  LogView.qml
src/NextAppUi/qml/onboard/: AddDevicePage.qml  GetNewOtpForDevice.qml  OnBoardingWizard.qml  OnboardingAccept.qml  OnboardingAccount.qml  OnboardingReady.qml  OnboardingServer.qml  OnboardingWelcome.qml
src/NextAppUi/qml/settings/: AdvancedSettings.qml  DeleteAccountConfirmation.qml  GlobalSettings.qml  NotificationSettings.qml  PlanSettings.qml  PrefSettings.qml  ResetConfirmation.qml  ResetNodesConfirmation.qml  ServerSettings.qml  SettingsDlg.qml  ThemeSchemePreviewDialog.qml
src/NextAppUi/qml/styling/: SplitterStyle.qml
src/NextAppUi/scripts/: prepare-linux-tarball.sh
src/NextAppUi/tests/: AcceptanceHarness.cpp  AcceptanceHarness.h  TestRuntimeSupport.h  nextappui_acceptance_device.cpp  tst_nextappui_acceptance.cpp  tst_nextappui_runtime.cpp
src/backend/: CMakeLists.txt
src/backend/include/nextapp/: GrpcServer.h  GrpcService.h  Metrics.h  Server.h  UserContext.h  certs.h  config.h  db.h  errors.h  nextappd.h  util.h
src/backend/lib/: CMakeLists.txt  Metrics.cpp  Server.cpp  UserContext.cpp  certs.cpp  util.cpp
src/backend/lib/db/: db.cpp
src/backend/lib/grpc/: Actions.cpp  Calendar.cpp  GreenDays.cpp  GrpcServer.cpp  GrpcService.cpp  Node.cpp  Tenants.cpp  Work.cpp  shared_grpc_server.cpp  shared_grpc_server.h
src/backend/server/: CMakeLists.txt  main.cpp
src/backend/tests/: CMakeLists.txt  time_date_tests.cpp
src/common/: CMakeLists.txt  error_mapping.cpp  util.cpp
src/proto/: CMakeLists.txt  absl_fix.cpp  common.proto  nextapp.proto  signup.proto
src/signup/: CMakeLists.txt
src/signup/include/signup/: GrpcServer.h  Metrics.h  Server.h  config.h
src/signup/lib/: CMakeLists.txt  GrpcServer.cpp  Metrics.cpp  Server.cpp
src/signup/server/: CMakeLists.txt  main.cpp
(+55 files in other folders)
